[package]
name = "compare_rc5_rsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.57"
rc5_algo = { git = "ssh://git@github.com/MatviySuk/Cryptography_course.git", branch = "RC5" }
clap = { version = "4.4.6", features = ["derive"] }