[package]
name = "rc5_algo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.3"
random = { git = "https://github.com/MatviySuk/DAS_Course.git", branch = "Random" }
md5_algo = { git = "https://github.com/MatviySuk/DAS_Course.git", branch = "MD5" }
